Wrong parameter passed to GetStringXXXChars in various places

XMLWordPrintable

    • b14

      Besides JDK-8282897, there are still places that pass JNI_FALSE as the last parameter to GetStringXXXChars, where it expects jboolean*, not jboolean.

      Files:
      java.desktop/unix/native/libawt_xawt/xawt/XlibWrapper.c
      java.base/windows/native/libnet/Inet6AddressImpl.c
      java.base/unix/native/libnet/Inet6AddressImpl.c
      java.desktop/windows/native/libawt/windows/awt_Win32GraphicsEnv.cpp
      java.desktop/windows/native/libawt/windows/awt_Desktop.cpp
      java.desktop/windows/native/libawt/windows/awt_Checkbox.cpp
      java.desktop/windows/native/libawt/windows/awt_Button.cpp


            Assignee:
            Zhengyu Gu
            Reporter:
            Zhengyu Gu
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: