8282978: Wrong parameter passed to GetStringXXXChars in various places

Reviewed-by: alanb, dfuchs