src/java.desktop/windows/native/libawt/windows/awt_Button.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1996, 2015, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1996, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -105,7 +105,7 @@ AwtButton* AwtButton::Create(jobject self, jobject parent)
         if (label == NULL) {
             labelStr = L"";
         } else {
-            labelStr = JNU_GetStringPlatformChars(env, label, JNI_FALSE);
+            labelStr = JNU_GetStringPlatformChars(env, label, NULL);
         }
         style = 0;
 
@@ -311,7 +311,7 @@ void AwtButton::_SetLabel(void *param)
         if (label == NULL) {
             labelStr = TEXT("");
         } else {
-            labelStr = JNU_GetStringPlatformChars(env, label, JNI_FALSE);
+            labelStr = JNU_GetStringPlatformChars(env, label, NULL);
         }
 
         if (labelStr == NULL) {
